packages/lang/test/__golden__/errors/empty-test.txt
error[TF015]: this `test` has no steps
 --> empty-test.tflw:2:1
  |
2 | 
  | ^
  |
  = help: indent at least one step under the `test` line
